@@ -1,0 +1,36 @@
+; $Id: en-GB.mod_weblinks.ini 
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+MOD_WEBLINKS_XML_DESCRIPTION="This modules displays weblinks from a category defined in the Weblinks component."
+MOD_WEBLINKS_FIELD_CATEGORY_LABEL="Category"
+MOD_WEBLINKS_FIELD_CATEGORY_DESC="Choose the weblinks category to display"
+MOD_WEBLINKS_FIELD_COUNT_DESC="Number of weblinks to display"
+MOD_WEBLINKS_FIELD_COUNT_LABEL="Count"
+MOD_WEBLINKS_FIELD_ORDERING_DESC="Ordering for the weblinks"
+MOD_WEBLINKS_FIELD_ORDERING_LABEL="Ordering"
+MOD_WEBLINKS_FIELD_VALUE_TITLE="Title"
+MOD_WEBLINKS_FIELD_VALUE_ORDER="Order"
+MOD_WEBLINKS_FIELD_VALUE_HITS="Hits"
+MOD_WEBLINKS_FIELD_VALUE_ASCENDING="Ascending"
+MOD_WEBLINKS_FIELD_VALUE_DESCENDING="Descending"
+MOD_WEBLINKS_FIELD_ORDERDIRECTION_DESC="Set the ordering direction"
+MOD_WEBLINKS_FIELD_ORDERDIRECTION_LABEL="Direction"
+MOD_WEBLINKS_FIELD_TARGET_DESC="Target browser window when the link is clicked"
+MOD_WEBLINKS_FIELD_TARGET_LABEL="Target Window"
+MOD_WEBLINKS_FIELD_FOLLOW_DESC="?"
+MOD_WEBLINKS_FIELD_FOLLOW_LABEL="Follow/No Follow"
+MOD_WEBLINKS_FIELD_VALUE_FOLLOW="Follow"
+MOD_WEBLINKS_FIELD_VALUE_NOFOLLOW="No follow"
+MOD_WEBLINKS_FIELD_VALUE_NEW_WINDOW="New window"
+MOD_WEBLINKS_FIELD_VALUE_POPUP_WINDOW="Popup Window"
+MOD_WEBLINKS_FIELD_VALUE_SAME_WINDOW="Same Window"
+MOD_WEBLINKS_FIELD_HITS_LABEL="Hits"
+MOD_WEBLINKS_FIELD_HITS_DESC="Show Hits"
+MOD_WEBLINKS_FIELD_DESCRIPTION_LABEL="Description"
+MOD_WEBLINKS_FIELD_DESCRIPTION_DESC="Display Weblink description"
+MOD_WEBLINKS="Weblinks"
+MOD_WEBLINKS_HITS="Hits"
+
