@@ -10,7 +10,7 @@
 // no direct access
 defined('_JEXEC') or die;
 
-// Include the syndicate functions only once
+// Include the weblinks functions only once
 require_once dirname(__FILE__).DS.'helper.php';
 
 $list = modWeblinksHelper::getList($params);
@@ -18,4 +18,4 @@ $list = modWeblinksHelper::getList($params);
 if (!count($list)) {
 	return;
 }
-require JModuleHelper::getLayoutPath('mod_weblinks');
+require JModuleHelper::getLayoutPath('mod_weblinks',$params->get('layout', 'default'));
