@@ -18,7 +18,7 @@
 			module="mod_wrapper">mod_wrapper.php</filename>
 		<folder>tmpl</folder>
 		<filename>helper.php</filename>
-		<filename>index.php</filename>
+		<filename>index.html</filename>
 		<filename>mod_wrapper.xml</filename>
 	</files>
 	<languages>
